# the_rust_book

chapter10_1/src/: main.rs
chapter10_2/src/: aggregator.rs  lib.rs  main.rs
chapter10_3/src/: main.rs
chapter11_1/adder/src/: lib.rs
chapter11_2/src/: lib.rs
chapter11_3/src/: lib.rs
chapter11_3/tests/: integration_test.rs
chapter13_1/src/: main.rs
chapter13_2/src/: main.rs
chapter14_3/adder/src/: main.rs
chapter15_1/src/: main.rs
chapter15_2/src/: main.rs
chapter15_3/src/: main.rs
chapter15_4/src/: main.rs
chapter15_5/src/: lib.rs  main.rs
chapter15_6/src/: main.rs
chapter16_1/src/: main.rs
chapter16_2/src/: main.rs
chapter16_3/src/: main.rs
chapter17_1/src/: lib.rs  main.rs
chapter17_2/src/: lib.rs  main.rs
chapter17_3/src/: lib.rs  main.rs  state_pattern.rs
chapter18_1/src/: main.rs
chapter18_2/src/: main.rs
chapter18_3/src/: main.rs
chapter5_1/: Cargo.toml
chapter5_1/src/: main.rs
chapter5_2/src/: main.rs
chapter5_3/src/: main.rs
chapter6_1/src/: main.rs
chapter6_2/src/: main.rs
chapter6_3/src/: main.rs
chapter7_2/restaurant/src/: lib.rs
chapter7_2/src/: main.rs
chapter8_1/src/: main.rs
chapter8_2/src/: main.rs
chapter8_3/src/: main.rs
chapter9_1/: Cargo.toml
chapter9_2/src/: main.rs
chapter9_3/: Cargo.toml
chapter9_3/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_world/: main
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
ownership/chapter4_1/src/: main.rs
ownership/chapter4_2/src/: main.rs
variables/src/: main.rs
(+1 files in other folders)
