[package]
name = "guessing_game"
license = "MIT"
version = "0.1.0"
edition = "2021"
description = "A fun game where you guess what number the computer has chosen."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3